--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 	</div>
 	<button class="ai-button">AI</button>
 </div>
+<script src="src/Constants.js"></script>
 <script src="src/KonvaImage.js"></script>
 <script src="src/KonvaText.js"></script>
 <script src="src/ScaleTransformer.js"></script>
 <script src="src/BaseScene.js"></script>
 <script src="src/CropScene.js"></script>
 <script src="src/TextScene.js"></script>
-<script src="src/CustomScene.js"></script>
 <script src="src/SceneManager.js"></script>
 <script src="index.js"></script>
 </body>
