--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 <script src="src/CropScene.js"></script>
 <script src="src/TextScene.js"></script>
 <script src="src/SceneManager.js"></script>
+<script src="src/StateManager.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
