--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
 	<button class="ai-button">AI</button>
 </div>
 <script src="src/Constants.js"></script>
+<script src="src/TransformerFactory.js"></script>
+<script src="src/SceneActionHandler.js"></script>
+<script src="src/HistoryManager.js"></script>
 <script src="src/KonvaImage.js"></script>
 <script src="src/KonvaText.js"></script>
 <script src="src/ScaleTransformer.js"></script>
